[tool.poetry]
name = "repl_python3_beta_PhasmoSave"
version = "0.1.0"
description = ""
authors = ["Paswa <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
PySimpleGUI = "^4.47.0"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
